[package]
name = "airspace-visualizer"
description = "Visualize Skytraxx airspaces. Made with Rust + Webassembly."
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
license = "AGPL-3.0"
repository = "https://github.com/dbrgn/airspace-visualizer"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
cfg-if = "0.1.2"
js-sys = "0.3"
openair = { version = "0.1.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "=0.2.42", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# Add logging support
log = "0.4"
console_log = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
